kgtkr/tkvs/tkvs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: tkvs-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tkvs.kgtkr.net
      secretName: tkvs-ingress-cert
  rules:
    - host: tkvs.kgtkr.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tkvs-server
                port:
                  number: 50051
